name:                cheesegrater
version:             0.1.0.0
homepage:            https://github.com/lancelet/cheesegrater
license:             Apache-2.0
license-file:        LICENSE
author:              Jonathan Merritt
maintainer:          j.s.merritt@gmail.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:
      base              >= 4.7 && < 4.8
  -- exposed-modules: