name:                cheesegrater
version:             0.1.0.0
homepage:            https://github.com/lancelet/cheesegrater
license:             Apache-2.0
license-file:        LICENSE
author:              Jonathan Merritt
maintainer:          j.s.merritt@gmail.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
  build-depends:
      base              >= 4.7 && < 4.8
    , QuickCheck        == 2.7.6
  exposed-modules:
      Graphics.CheeseGrater.ApproxEq
    , Graphics.CheeseGrater.VecMath

-- | Test suite
test-suite test
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       tests
  ghc-options:          -Wall -Werror
  main-is:              Test.hs
  build-depends:
      cheesegrater
    , base
    , QuickCheck
    , tasty                     == 0.10.1
    , tasty-hunit               == 0.9.0.1
    , tasty-quickcheck          == 0.8.3.2